--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Helping Hands</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../../public/css/style.css">
     </head>
 
 <body>
@@ -17,7 +17,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/0b49d94544.js" crossorigin="anonymous"></script>
-    <script src="js/javascript.js"></script>
+    <script src="../../public/js/"></script>
 </body>
 
 </html>
