started writing on-click function for javascript, having trouble with getting handlebars files to work on my end

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/0b49d94544.js" crossorigin="anonymous"></script>
-    <script src="../../public/js/"></script>
+    <script src="../../public/js/javascript.js"></script>
 </body>
 
 </html>
