--- a/views/partials/jobs/jobs.handlebars
+++ b/views/partials/jobs/jobs.handlebars
@@ -9,11 +9,11 @@
                 </div>
 
                 <div class="panel-block">
-                    {{type}}
+                    <strong>Type: </strong>{{type}}
                 </div>
 
                 <div class= "panel-block">
-                    {{wage}}
+                    <strong>Wage: </strong>{{wage}}
                 </div>
 
                 <div class= "panel-block">
