--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,14 +13,177 @@
                     <div class="column login-div">
                         <h3>Mission Statement</h3>
                         <p>Many jobs are out of reach for those who experience homelessness. We help connect those in our society who are less fortunate with companies and organizations that are willing to give people a hand to help them back onto their feet by providing a direct link between them.</p>
-                        <button id="#" class="button">Log in</button>
-                        <button id="#" class="button">Sign Up</button>
+                        <button id="login" class="button">Log In</button>
+                        <button id="signup" class="button">Sign Up</button>
                     </div>
                 </div>
             </div>
-
         </div>
+
     </section>
+
+        {{!-- Log In Modal --}}
+<div class="modal" id="login-modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+          <header class="modal-card-head">
+            <p class="modal-card-title">Log In</p>
+            <button class="delete" aria-label="close"></button>
+          </header>
+          <section class="modal-card-body">
+    
+            <div class="field is-horizontal">
+                <div class="field-label is-normal">
+                    <label class="label">E-mail</label>
+                </div>
+                <div class="field-body">
+                  <div class="field is-expanded">
+                    <p class="control is-expanded has-icons-left has-icons-right">
+                        <input class="input" type="email" placeholder="E-mail address">
+                        <span class="icon is-small is-left">
+                          <i class="fas fa-envelope"></i>
+                        </span>
+                      </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="field is-horizontal">
+                <div class="field-label is-normal">
+                    <label class="label">Password</label>
+                </div>
+                <div class= "field-body">
+                    <div class= "field is-expanded">
+                        <p class="control has-icons-left">
+                            <input class="input" type="password" placeholder="Password">
+                            <span class="icon is-small is-left">
+                              <i class="fas fa-lock"></i>
+                            </span>
+                          </p>
+                    </div>
+                </div>
+              </div>
+            
+    
+    
+          </section>
+          <footer class="modal-card-foot">
+            <button class="button is-primary" class="submit">
+                Submit
+              </button>
+        
+          </footer>
+        </div>
+      </div>
+
+{{!-- Sign Up Modal --}}
+ <div class="modal" id="signup-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Sign Up</p>
+        <button class="delete" aria-label="close"></button>
+      </header>
+      <section class="modal-card-body">
+        <div class="field is-horizontal">
+          <div class="field-label is-normal">
+            <label class="label">Name</label>
+          </div>
+          <div class="field-body">
+            <div class="field">
+              <p class="control is-expanded has-icons-left">
+                <input class="input" type="text" placeholder="First Name">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-user"></i>
+                </span>
+              </p>
+            </div>
+
+            <div class="field">
+              <p class="control is-expanded has-icons-left has-icons-right">
+                <input class="input" type="text" placeholder="Last Name">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-user"></i>
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+      <div class="field is-horizontal">
+          <div class="field-label is-normal">
+              <label class="label">E-mail</label>
+          </div>
+          <div class="field-body">
+            <div class="field is-expanded">
+              <p class="control is-expanded has-icons-left has-icons-right">
+                  <input class="input" type="email" placeholder="E-mail address">
+                  <span class="icon is-small is-left">
+                    <i class="fas fa-envelope"></i>
+                  </span>
+                </p>
+            </div>
+          </div>
+        </div>
+
+      <div class="field is-horizontal">
+          <div class="field-label is-normal">
+              <label class="label">Phone</label>
+          </div>
+          <div class="field-body">
+            <div class="field is-expanded">
+              <div class="field has-addons">
+                <p class="control">
+                  <a class="button is-static">
+                    +1
+                  </a>
+                </p>
+                <p class="control is-expanded">
+                  <input class="input" type="tel" placeholder="Your phone number">
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="field is-horizontal">
+          <div class="field-label is-normal">
+            <label class="label">Company</label>
+          </div>
+          <div class="field-body">
+            <div class="field">
+              <div class="control">
+                <input class="input" type="text" placeholder="Your company's name">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="field is-horizontal">
+          <div class="field-label is-normal">
+              <label class="label">Password</label>
+          </div>
+          <div class= "field-body">
+              <div class= "field is-expanded">
+                  <p class="control has-icons-left">
+                      <input class="input" type="password" placeholder="Enter a secure password">
+                      <span class="icon is-small is-left">
+                        <i class="fas fa-lock"></i>
+                      </span>
+                    </p>
+              </div>
+          </div>
+        </div>
+
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-primary" class="submit">
+          Create Account
+        </button>
+      </footer>
+    </div>
+  </div>
 
 
          <footer class="footer">
