jobpost.handlebars created

--- a/views/layouts/jobpost.handlebars
+++ b/views/layouts/jobpost.handlebars
@@ -14,7 +14,7 @@
     </div>
 
     <div class="field">
-        <label class="label is-medium">Company</label>
+        <label class="label is-medium">Company:</label>
         <div class="control has-icons-left has-icons-right">
             <input class="input is-medium" type="email" placeholder="Job Title:">
             <span class="icon is-left">
