added job details page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -74,7 +74,8 @@
         
           </footer>
         </div>
-      </div>
+    <button class="modal-close is-large" aria-label="close"></button>
+  </div>
 
 {{!-- Sign Up Modal --}}
  <div class="modal" id="signup-modal">
@@ -183,7 +184,8 @@
         </button>
       </footer>
     </div>
-  </div>
+  <button class="modal-close is-large" aria-label="close"></button>
+</div>
 
 
          <footer class="footer">
