--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,10 @@
 .subtitle {
     color:#000c20;
 }
+#company-login-div {
+    border: 2px solid #000c20;
+    border-radius: 5px;
+}
 .login-div {
     background-color: #97d9d9;
     color: #000c20;
@@ -23,6 +27,7 @@
 .button {
     background-color: #63a0b7;
     color: white;
+    margin-top: 15px;
 }
 .modal-label {
     color: white;
