--- a/views/jobindex.handlebars
+++ b/views/jobindex.handlebars
@@ -34,7 +34,7 @@
     <div id="job-header">
         <h1>Job Index</h1>
 
-    <div class="dropdown">
+    <div class="dropdown is-hoverable">
         <div class="dropdown-trigger">
             <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
             <span>Sort Jobs</span>
