fixed flex wrapping issue with job list

--- a/views/jobindex.handlebars
+++ b/views/jobindex.handlebars
@@ -63,7 +63,7 @@
     </div>
 
 
-    <div class="columns">
+    <div class="columns jobs-column">
 
         {{#each jobs}}
             {{> jobs/jobs}}
