--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,7 @@
 .subtitle {
     color:#000c20;
 }
+
 #company-login-div {
     border: 2px solid #000c20;
     border-radius: 5px;
@@ -29,8 +30,14 @@
     color: white;
     margin-top: 15px;
 }
+
 .modal-label {
     color: white;
+}
+
+.jobs-column {
+    flex-wrap: wrap;
+    max-width: 90%;
 }
 
 
