--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -48,7 +48,7 @@
                 <div class="field-body">
                     <div class="field is-expanded">
                         <p class="control is-expanded has-icons-left has-icons-right">
-                            <input class="input" type="email" placeholder="E-mail address">
+                            <input class="input loginEmail" type="email" placeholder="E-mail address">
                             <span class="icon is-small is-left">
                                 <i class="fas fa-envelope"></i>
                             </span>
@@ -64,7 +64,7 @@
                 <div class="field-body">
                     <div class="field is-expanded">
                         <p class="control has-icons-left">
-                            <input class="input" type="password" placeholder="Password">
+                            <input class="input loginPassword" type="password" placeholder="Password">
                             <span class="icon is-small is-left">
                                 <i class="fas fa-lock"></i>
                             </span>
@@ -77,7 +77,7 @@
 
         </section>
         <footer class="modal-card-foot">
-            <button class="button is-primary" class="submit">
+            <button class="button is-primary loginBtn" class="submit">
                 Submit
               </button>
         
