updated job details page to display job info

--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -34,16 +34,16 @@
     <div class= "card">
 
         <div class= "card-header-title">
-             <h1>{{title}}</h1>
+             <h1>{{job.title}}</h1>
         </div>
 
         <p>Company: {{company.company_name}}</p>
 
-        <p>{{description}}</p>
+        <p>{{job.description}}</p>
 
-        <p>Type: {{type}}</p>
+        <p>Type: {{job.type}}</p>
 
-        <p>Wage: {{wage}}</p>
+        <p>Wage: {{job.wage}}</p>
 
         <h2>Contact Information</h2>
 
