fixed contact modal

--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -26,7 +26,7 @@
                     Post a Job
                 </a>
 
-                <a class="navbar-item">
+                <a class="navbar-item" href="">
                     View Your Listings
                 </a>
             </div>
