--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -53,8 +53,49 @@
 
         <p>Phone: {{manager.phone}}</p>
 
-        <button class= "button">Contact Manager</button>
+        <button class= "button contact-manager">Contact Manager</button>
 
     </div>
+
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div id="contact-form" class="modal-content">
+        <form action="" method="post" autocomplete="on">
+            <div class="field">
+                <div class="control">
+                    <label class="label modal-label">Name:</label>
+                    <input  id="contact-name" class="input" type="text" placeholder="Normal input">
+                </div>
+            </div>
+            <div class="field">
+                <label class="label modal-label">Email:</label>
+                <div class="control has-icons-left has-icons-right">
+                    <input id="contact-email"class="input" type="email" placeholder="Email input">
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-envelope"></i>
+                    </span>
+
+                </div>
+            </div>
+
+            <div class="field">
+                <label class="label modal-label">Message</label>
+                <div class="control">
+                    <textarea id="contact-message" class="textarea" placeholder="Textarea"></textarea>
+                </div>
+            </div>
+
+            <div class="field is-grouped">
+                <div class="control">
+                    <button id="contact-send" class="button is-link" type="submit">Submit</button>
+                </div>
+                <div class="control">
+                    <button id="contact-close" class="button is-link is-light">Cancel</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <button class="modal-close is-large" aria-label="close"></button>
+</div>
 
 </div>
