got job button working

--- a/views/partials/jobs/jobs.handlebars
+++ b/views/partials/jobs/jobs.handlebars
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class= "panel-block">
-                    <button class= "button is-primary is-fullwidth">
+                    <button class= "button is-primary is-fullwidth job-data" data-id="{{id}}">
                         Learn More
                     </button>
 
