ajax and message calls

--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -47,11 +47,11 @@
 
         <h2>Contact Information</h2>
 
-        <p>Manager: {{manager.first_name}} {{manager.last_name}}</p>
+        <p id="manager-name">Manager: {{manager.first_name}} {{manager.last_name}}</p>
 
-        <p>E-mail: {{manager.email}}</p>
+        <p id="manager-email">E-mail: {{manager.email}}</p>
 
-        <p>Phone: {{manager.phone}}</p>
+        <p id="manager-phone">Phone: {{manager.phone}}</p>
 
         <button class= "button">Contact Manager</button>
 
