--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -47,11 +47,11 @@
 
         <h2>Contact Information</h2>
 
-        <p id="manager-name">Manager: {{manager.first_name}} {{manager.last_name}}</p>
+        <p>Manager: <span id="manager-name-first">{{manager.first_name}}</span> <span id="manager-name-last">{{manager.last_name}}</span></p>
 
-        <p id="manager-email">E-mail: {{manager.email}}</p>
+        <p>E-mail: <span id="manager-email">{{manager.email}}</span></p>
 
-        <p id="manager-phone">Phone: {{manager.phone}}</p>
+        <p>Phone: <span id="manager-phone" >{{manager.phone}}</span></p>
 
         <button class= "button contact-manager">Contact Manager</button>
 
