--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -53,10 +53,10 @@
         <div class= "user-profile">
 
             <div class= "view-profile">
-                <p>First Name: {{first_name}}</p>
-                <p>Last Name: {{last_name}}</p>
-                <p>E-mail: {{email}}</p>
-                <p>Phone: {{phone}}</p>
+                <p>First Name: {{manager.first_name}}</p>
+                <p>Last Name: {{manager.last_name}}</p>
+                <p>E-mail: {{manager.email}}</p>
+                <p>Phone: {{manager.phone}}</p>
                 <p>Company Name: {{company.company_name}}</p>
                 <p>Company Phone: {{company.phone}}</p>
 
