added correct route to create a new job page

--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -22,7 +22,7 @@
                     Profile
                 </a>
 
-                <a class="navbar-item" href="api/job/create">
+                <a class="navbar-item" href="/job/create">
                     Post a Job
                 </a>
 
